--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         }
         .searcher select {
             width: 50%;
-            margin: 20px 0;
+            margin: 10px 0;
             padding: 10px;
         }
         .searchpic {
@@ -193,7 +193,7 @@
                 <figcaption>France</figcaption>
             </figure>
             <figure>
-                <img src="scotland.jpg" alt="Scotland" style="height: 85%;">
+                <img src="scotland.jpg" alt="Scotland" >
                 <figcaption>Scotland</figcaption>
             </figure>
             <figure>
@@ -208,7 +208,7 @@
                 <figcaption>Italy</figcaption>
             </figure>
             <figure>
-                <img src="netherlands1.jpg" alt="Scotland" style="height: 85%;">
+                <img src="netherlands1.jpg" alt="Scotland" >
                 <figcaption>netherlands</figcaption>
             </figure>
             <figure>
