--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             height: auto;
         }
         .button {
-            width: 5%;
+            width: 20%;
             text-align: center;
-            margin-left: 30px;
+            margin-left: 40px;
             margin-bottom: 25px;
         }
         .button button {
@@ -82,6 +82,14 @@
             cursor: pointer;
             width: 100%;
             height: 60px;
+        }
+        @media (max-width: 480px) {
+            .button button {
+                width: 100%;
+                height: 45px;
+                font-size: 0.9em;
+                padding: 10px;
+            }
         }
         .destination {
             padding: 20px;
