--- a/index.html
+++ b/index.html
@@ -83,9 +83,22 @@
             width: 100%;
             height: 60px;
         }
-        @media (max-width: 480px) {
+        @media (max-width: 768px) {
+            .searcher select {
+                width: 80%;
+            }
             .button button {
-                width: 100%;
+                width: 60%;
+                height: 50px;
+                font-size: 1em;
+            }
+        }
+        @media (max-width: 480px) {
+            .searcher select {
+                width: 90%;
+            }
+            .button button {
+                width: 80%;
                 height: 45px;
                 font-size: 0.9em;
                 padding: 10px;
